[project]
name = "algo-go-go"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sswfive", email = ""},
]
dependencies = [
    "pytest>=8.1.1",
    "requests>=2.31.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
